<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".ui.NuevoCreyenteActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <EditText
                android:id="@+id/etNombresApellidos"
                android:hint="@string/hintNombreApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

        <EditText
                android:id="@+id/dpFechaNacimiento"
                android:hint="@string/hintFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etNombresApellidos"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

        <EditText
                android:id="@+id/etCelularContacto"
                android:hint="@string/hintCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dpFechaNacimiento"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"/>

        <TextView android:id="@+id/tvDeseaRed"
                  android:text="@string/hintEstarEnRed"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/etCelularContacto"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:layout_marginRight="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:textSize="18sp"/>

        <RadioGroup
                android:id="@+id/radioGroupDeseaRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvDeseaRed"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">
            <RadioButton android:id="@+id/radio_si_desea_red"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvSí"
                         android:checked="true"/>
            <RadioButton android:id="@+id/radio_no_desea_red"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:text="@string/tvNo" android:layout_marginStart="40dp"/>
        </RadioGroup>

        <TextView android:id="@+id/tvPasaraRed"
                  android:text="@string/tvPasaráRed"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/radioGroupDeseaRead"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:layout_marginRight="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:textSize="18sp"/>

        <RadioGroup
                android:id="@+id/radioGroupPasaraRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvPasaraRed"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">
            <RadioButton android:id="@+id/radio_si_pasa_red"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvSí"
                         android:checked="true"/>
            <RadioButton android:id="@+id/radio_no_pasa_red"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:text="@string/tvNo" android:layout_marginStart="40dp"/>
        </RadioGroup>

        <TextView android:id="@+id/tvInvitadoFiesta"
                  android:text="@string/tvFiestaNuevoCreyente"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  app:layout_constraintTop_toBottomOf="@id/radioGroupPasaraRed"
                  app:layout_constraintRight_toRightOf="parent"
                  app:layout_constraintLeft_toLeftOf="parent"
                  android:layout_marginRight="15dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:textSize="18sp"/>

        <RadioGroup
                android:id="@+id/radioInvitadoFiesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvInvitadoFiesta"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">
            <RadioButton android:id="@+id/radio_si_invitado_fiesta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvSí"
                         android:checked="true"/>
            <RadioButton android:id="@+id/radio_no_invitado_fiesta"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvNo"/>
            <RadioButton android:id="@+id/radio_le_escribire"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvLeEscribiré"/>
            <RadioButton android:id="@+id/radio_otros"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/tvOtros"/>
        </RadioGroup>

        <EditText
                android:id="@+id/etOtros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/radioInvitadoFiesta"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="18sp"
                android:visibility="gone"/>

        <EditText
                android:id="@+id/etComentarios"
                android:hint="@string/hintComentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/etOtros"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:inputType="textMultiLine"
                android:maxLines="5"/>

        <Button
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvEnviar"
                app:layout_constraintTop_toBottomOf="@+id/etComentarios"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/background_button"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>